# 2024-lrec-coling-faceacts

./: .gitignore  .pre-commit-config.yaml  README.md  pylintrc  pyproject.toml
data/proc/preprocess/extraction/seed42.hlen3/: dev.csv  test.csv  train.csv
data/proc/preprocess/extraction/seed42.hlen3.mtl-with-mrda/fold-0/: test.csv  train.csv
data/proc/preprocess/extraction/seed42.hlen3.mtl-with-mrda/fold-1/: dev.csv  test.csv
data/proc/preprocess/extraction/seed42.hlen3.mtl-with-mrda/fold-2/: test.csv  train.csv
data/proc/preprocess/extraction/seed42.hlen3.mtl-with-mrda/fold-3/: dev.csv  test.csv
data/proc/preprocess/extraction/seed42.hlen3.mtl-with-mrda/fold-4/: dev.csv  test.csv
data/proc/preprocess/extraction/seed42.hlen3.with-mrda/: dev.csv  test.csv  train.csv
data/proc/preprocess/extraction/seed42.hlen3.with-swda/: dev.csv  test.csv  train.csv
data/proc/preprocess/extraction/seed42.hlen3.xval/fold-0/: test.csv  (+1 more)
data/proc/preprocess/extraction/seed42.hlen5/: dev.csv  test.csv  train.csv
data/proc/preprocess/extraction/seed42.hlen7/: dev.csv  test.csv  train.csv
data/proc/preprocess/inline/seed42.hlen3/: dev.csv  test.csv  train.csv
data/raw/: OASIS.csv  Persuasion-Face-Act-Prediction.With-MRDA.csv  Persuasion-Face-Act-Prediction.With-Politeness-Strategies.csv  Persuasion-Face-Act-Prediction.With-Politeness.csv  Persuasion-Face-Act-Prediction.With-SWDA.V2.csv  Persuasion-Face-Act-Prediction.With-SWDA.csv  Persuasion-Face-Act-Prediction.csv
prompts/dgen/: criteria  one-shot  zero-shot
src/core/: functional.py
src/data/: cmu.py  prompts.py
(+38 files in other folders)
