[tool.poetry]
name = "faceacts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.0.1"
openpyxl = "^3.1.2"
langchain = "^0.0.179"
openai = "^0.27.7"
more-itertools = "^9.1.0"
torch = "2.0.0"
transformers = "^4.30.1"
sentencepiece = "^0.1.99"
lightning = "^2.0.3"
retry = "^0.9.2"
evaluate = "^0.4.0"
scikit-learn = "^1.2.2"


[tool.poetry.group.dev.dependencies]
ipython = "^8.13.2"
ipdb = "^0.13.13"
pre-commit = "^3.3.1"
mypy = "^1.3.0"
pylint = "^2.17.4"
pandas-stubs = "^2.0.1.230501"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
